Removed "Code Sets" tile from CodeEnforcement dashboard- it's only available to MuniAdmin now. Updated "Date Created" fields with new filter and removed unusable column filters. Updated "Active" columns to non-interactive checkbox widgets. Updated breadcrumbs and Global Code Sets tile. Files modified - [MunicipalityCodeSets.html,CXAdmin.html,CXCodeList.variables.json,CXCodeList.html,MunicipalityCodeList.variables.json,MunicipalityCodeSets.variables.json,CodeEnforcementDashboard.html,MunicipalityCodeList.html,CXCodeSets.html,CXCodeSets.variables.json]

--- a/src/main/webapp/pages/CXAdmin/CXAdmin.html
+++ b/src/main/webapp/pages/CXAdmin/CXAdmin.html
@@ -138,7 +138,7 @@
                                         <wm-icon iconsize="3em" iconclass="wi wi-hammer" name="icon11"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" class="col-xs-9" name="gridcolumn34">
-                                        <wm-label caption="CX Code Sets" class="p" fontsize="1.4" fontunit="em" name="label20"></wm-label>
+                                        <wm-label caption="Global Code Sets" class="p" fontsize="1.4" fontunit="em" name="label20"></wm-label>
                                         <wm-label caption="bind:Variables.svCountOfGlobalCodeList.dataSet[$i].countCodeList" fontsize="3" fontunit="em" class="p" name="label21"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
