--- a/src/main/webapp/pages/CXCodeList/CXCodeList.html
+++ b/src/main/webapp/pages/CXCodeList/CXCodeList.html
@@ -12,7 +12,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow9">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn9" padding="2em unset">
-                        <wm-label name="labelHeader" class="h4" fontweight="bold" caption="bind:Variables.lvCurrentCodeSetObj.dataSet.data[$i].codeSetTitle + ' (Global)'"></wm-label>
+                        <wm-label name="labelHeader" class="h4" fontweight="bold" caption="bind:'Global Code List: '+Variables.lvCurrentCodeSetObj.dataSet.data[$i].codeSetTitle"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow1">
@@ -22,7 +22,9 @@
                                 <wm-grid-column binding="codeNumber" caption="Code Number" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="codeTitle" caption="Code Title" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="code" caption="Code" type="text" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                <wm-grid-column binding="activeYn" caption="Active" type="boolean" generator="assigned" edit-widget-type="checkbox" show="true" readonly="false"></wm-grid-column>
+                                <wm-grid-column binding="activeYn" caption="Active" type="boolean" widget-type="checkbox" generator="assigned" edit-widget-type="checkbox" show="true" readonly="false">
+                                    <wm-checkbox scopedatavalue="row['activeYn']" disabled="{{colDef.readonly || !isGridEditMode}}" class="" data-ng-class=""></wm-checkbox>
+                                </wm-grid-column>
                                 <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
                                 <wm-grid-action key="addNewRow" display-name="New Code" show="true" class="btn-primary" iconclass="wi wi-plus" title="New Code" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
                                 <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
